[gd_scene load_steps=4 format=3 uid="uid://cjcmbxtc0tngq"]

[ext_resource type="Theme" uid="uid://tgxaae13tjns" path="res://Main/Assets/Themes/primitive_theme.tres" id="1_gxkxm"]
[ext_resource type="Script" path="res://Main/Menu/Scripts/enter_lobby.gd" id="1_khltl"]
[ext_resource type="PackedScene" uid="uid://ddu4dpvang7a3" path="res://Main/Menu/Scenes/shader_background.tscn" id="2_fab80"]

[node name="EnterLobby" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_gxkxm")
script = ExtResource("1_khltl")
metadata/_edit_lock_ = true

[node name="ShaderBackground" parent="." instance=ExtResource("2_fab80")]
layout_mode = 1
grow_horizontal = 1
grow_vertical = 1
metadata/_edit_lock_ = true

[node name="Menu" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -258.5
offset_top = -343.5
offset_right = 258.5
offset_bottom = 343.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 33
alignment = 1

[node name="NameEdit" type="LineEdit" parent="Menu"]
layout_mode = 2
theme = ExtResource("1_gxkxm")
text = "Player"
placeholder_text = "Имя"
max_length = 15

[node name="CodeEdit" type="LineEdit" parent="Menu"]
layout_mode = 2
placeholder_text = "#Код"
clear_button_enabled = true

[node name="CreateButton" type="Button" parent="Menu"]
unique_name_in_owner = true
custom_minimum_size = Vector2(517, 0)
layout_mode = 2
disabled = true
text = "Создать"

[node name="JoinButton" type="Button" parent="Menu"]
unique_name_in_owner = true
layout_mode = 2
disabled = true
text = "Войти"

[connection signal="text_changed" from="Menu/NameEdit" to="." method="_on_name_edit_text_changed"]
[connection signal="text_changed" from="Menu/CodeEdit" to="." method="_on_code_edit_text_changed"]
[connection signal="pressed" from="Menu/CreateButton" to="." method="_on_create_button_pressed"]
[connection signal="pressed" from="Menu/JoinButton" to="." method="_on_join_button_pressed"]
